--- a/index.html
+++ b/index.html
@@ -1,43 +1,24 @@
-<H1>ADVOCACIA</H1>
-<p>Além de ocupar a posição mais alta do pódio pelo quarto ano consecutivo, nos últimos dois anos, a especialidade aumentou mais de 
-    20% o número de bancas Mais Admiradas. A maior parte das empresas que votaram na especialidade são do setor de Comércio.
-    O curso de Direito realmente é um dos mais concorridos e isso acaba assustando alguns estudantes.
-    Porém, tudo depende de foco. Ter um bom resultado no vestibular ou no Enem é totalmente possível, desde que você se dedique.
-    </p>
+<!DOCTYPE html>
+<html lang="pr.br"
+ <head>
+   <seta charset="UTF-8"
+   <title> Jojo-Bizarre-ADVENTURE PARTE l</title>
+   <linke rel="stylesheet" href="style.css"
+ </head>
 
-   <p>abe o que pode ajudar a conquistar sua vaga na faculdade?
-    Faculdade de Direito é difícil? A dificuldade da faculdade de Direito depende muito se o seu perfil
-     se encaixa no curso. Exemplo, se você não gosta de ler, mas quer fazer Direito, as dificuldades serão maiores. Dedicação e empenho
-      São as palavras-chave para quem deseja ser um bom profissional e atuar na área.
-    O advogado criminalista é o profissional especializado em Direito Penal, área que engloba a resolução de conflitos e casos criminais. 
-    Sua função é assegurar que os seus clientes recebam um julgamento justo e equilibrado, usando todos os recursos da lei
-     para ajudar a proteger os seus direitos e interesses
-    </p>
-  <p>DvacaciaDireito Digital. Dentre as melhores áreas do Direito, certamente deve ser mencionada a do Direito Digital. ...
-    Direito Tributário. ...
-    Direito Internacional. ...
-    Compliance. ...
-    Direito empresarial. ...
-    Promotoria. ...Direito Digital. Dentre as melhores áreas do Direito, certamente deve ser mencionada a do Direito Digital. ...
-    Direito Tributário. ...
-    Direito Internacional. ...
-    Compliance. ...
-    Direito empresarial. ...
-    Promotoria. ...
-    Defensoria. 
-    Magistratura.
-    Defensoria
-    Magistratur</p> 
 
-O escritório Sodré Advocacia além de prestar serviços jurídicos especializados na esfera preventiva, 
-consultiva e contenciosa, nasce com o propósito de buscar formas mais humanizadas para solucionar os conflitos de seus clientes, 
-possibilitando espaço cooperativo para que as relações sejam restauradas ou transformadas por meio do diálogo.
-O escritório oferece aos seus clientes outras maneiras de solução de conflito, além da via judicial.
- Conta com membros que atuam em procedimentos de mediação, na condição de advogados, de modo a garantir que os conflitos a
- presentados sejam resolvidos com brevidade e economia, preservando as relações envolvidas.
+ <body>
+  <htal>
+    <hl>jojo-bizarre-adventura parte l</hl>
 
-Diante das mais recentes alterações legislativas, o cidadão tem perante de si múltiplas possibilidades 
-de respostas satisfatórias aos seus conflitos. Foi pensando nesse novo sistema de justiça, que o escritório oferece
- aos seus clientes, profissionais qualificados que atuam como gestores do conflito, analisando as peculiaridades do 
- caso, a dinâmica das relações, bem como o perfil dos envolvidos na disputa, apresentando o encaminhamento mais adequado 
- para a solução do conflito apresentado, ou seja, por meio da negociação, da conciliação, da mediação, ou da via judicial.
+
+    <p> parte 1 : a primeira parte de "Jojo" "s bizarre adventure" e chama de "phantom blood" (sangua fantsma,em .patre).
+       nesta paete, a hintiseia se padda na inglrs do sacukla21 e rivalido entre joudt godkisnfi e d brendo um jovo ambir qie emyrj da via 
+       a devpvacidam e um parede muitta em oir entde ,com isso tem quw esctuifd por mutios anos maisoumesc 5 anis </p>
+
+
+<p> de advogacia e um coisan uma inoirtade na vida de agu jrudn de 5 anois nfda qui faris amks nios bai ta wui 0wn 
+  ppq te,m ,histiria se passa na inglrra foi em portigers seque rijdfd oficeiu trduiv ieneb d jcien nvjfu que cjo
+  gatre se eque com ,muito aejifnu fuj2nnufnuend nvujejifn ejfnueniw0o fhuneif jninw
+</body>
+</p>
