--- a/index.html
+++ b/index.html
@@ -2,23 +2,29 @@
 <html lang="pr.br"
  <head>
    <seta charset="UTF-8"
-   <title> Jojo-Bizarre-ADVENTURE PARTE l</title>
+   <title> Advocacia l</title>
    <linke rel="stylesheet" href="style.css"
  </head>
 
 
  <body>
   <htal>
-    <hl>jojo-bizarre-adventura parte l</hl>
+    <hl>advocacia l</hl>
 
 
-    <p> parte 1 : a primeira parte de "Jojo" "s bizarre adventure" e chama de "phantom blood" (sangua fantsma,em .patre).
-       nesta paete, a hintiseia se padda na inglrs do sacukla21 e rivalido entre joudt godkisnfi e d brendo um jovo ambir qie emyrj da via 
-       a devpvacidam e um parede muitta em oir entde ,com isso tem quw esctuifd por mutios anos maisoumesc 5 anis </p>
+    <p> parte 1 : aA Advocacia é área responsável pela defesa dos interesses de pessoas físicas e jurídicas, ou seja, pessoas e empresas,
+       e pela manutenção e integridade dos seus bens, dentro dos princípios éticos e questões legais do país e de forma a fortalecer o estado 
+       democrático de direito
+       Profissão: Advogado - Direito | iPED
+       A profissão de advogado consiste em trabalhar na área de direito dando suporte em situações de julgamentos, divórcio e entre outras.
+        Com isso, é possível que o profissional se especialize dentro de uma determinada área, como, direito civil, trabalhista, família,
+         empresarial e entre outros. </p>
 
 
-<p> de advogacia e um coisan uma inoirtade na vida de agu jrudn de 5 anois nfda qui faris amks nios bai ta wui 0wn 
-  ppq te,m ,histiria se passa na inglrra foi em portigers seque rijdfd oficeiu trduiv ieneb d jcien nvjfu que cjo
-  gatre se eque com ,muito aejifnu fuj2nnufnuend nvujejifn ejfnueniw0o fhuneif jninw
+<p> 
+  A Advocacia é a área técnica que defende os interesses das pessoas, usando do embasamento nas leis,
+   decisões judiciais e teorias jurídicas. Em território nacional, ela é exercida pelos inscritos na Ordem dos Advogados do Brasil (OAB).
+    Essa profissão tem origem na Grécia Antiga.
+    O principal trabalho do advogado é prestar assessoria jurídica a seus clientes. Ele pode auxiliar na redação de contratos,
+     em processos judiciais, na elaboração de recursos, na defesa de direitos e na defesa de seus clientes em juízo.</p>
 </body>
-</p>
