--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <body>
   <htal>
     <hl>advocacia l</hl>
-
+    <img id="imagem" scr="advocacia.jpg>"
 
     <p> parte 1 : aA Advocacia é área responsável pela defesa dos interesses de pessoas físicas e jurídicas, ou seja, pessoas e empresas,
        e pela manutenção e integridade dos seus bens, dentro dos princípios éticos e questões legais do país e de forma a fortalecer o estado 
